DOCS: sign in  API 추가

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mysql2": "^2.1.0",
     "recursive-readdir-synchronous": "0.0.4",
     "sequelize": "^6.3.3",
+    "swagger-ui-express": "^4.1.4",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0",
     "yamljs": "^0.3.0"
