--- a/docs/specs/books/get.yml
+++ b/docs/specs/books/get.yml
@@ -6,6 +6,7 @@
     description: '책에 대한 자세한 기록을 불러오는 API 입니다.'
     parameters:
     - name: id
+      description: '선택한 책의 id'
       in: path
       type: 'integer'
       required: true
