--- a/docs/specs/books/post.yml
+++ b/docs/specs/books/post.yml
@@ -66,7 +66,7 @@
               tags:
                 type: 'array'
                 items:
-                  type: integer
+                  type: string
                 description: '태그'
               userId:
                 type: 'integer'
