--- a/docs/specs/users/gets.yml
+++ b/docs/specs/users/gets.yml
@@ -1,9 +1,15 @@
-'/users/books':
+'/users/books/{userId}':
   get:
     tags:
       - users
     summary: '책 API'
     description: '사용자가 남긴 책 전체 목록을 불러오는 API 입니다.'
+    parameters:
+    - name: userId
+      description: '테스트를 위해 일단 params으로 사용자ID를 받게 해놓음'
+      in: path
+      type: 'integer'
+      required: true
     responses:
       200:
         content:
