--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
     "recursive-readdir-synchronous": "0.0.4",
+    "request": "^2.88.2",
     "sequelize": "^6.3.3",
     "swagger-ui-express": "^4.1.4",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0",
+    "xml2js": "^0.4.23",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
