--- a/docs/specs/users/gets.yml
+++ b/docs/specs/users/gets.yml
@@ -2,7 +2,7 @@
   get:
     tags:
       - users
-    summary: '책 API'
+    summary: '마이페이지 - 나의 기록 API'
     description: '사용자가 남긴 책 전체 목록을 불러오는 API 입니다.'
     parameters:
     - name: userId
